[package]
name = "rustmssql"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
bigdecimal = "0.4.7"
chrono = "0.4.39"
parquet = "54.0.0"
rust_decimal = "1.36.0"
tiberius = { version = "0.12.3", features = ["chrono"]}
tokio = { version = "1.43.0", features = ["net", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["compat"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.9"
