[package]
name = "rustmssql"
version = "0.1.1"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
parquet = "54.0.0"
chrono = "0.4.39"
tiberius = { version = "0.12.3", features = ["chrono"]}
tokio = { version = "1.43.0", features = ["net", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.13", features = ["compat"] }
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17.9"
pyo3 = { version = "0.20.0", features = ["extension-module"] }
pyo3-asyncio = { version = "0.20.0", features = ["tokio-runtime"] }

[lib]
name = "rustmssql_python"
crate-type = ["cdylib"]

[[bin]]
name = "rustmssql"
path = "src/main.rs"